Prevent panel text from clipping on mobile zoom
This clipping is more likely to happen when user increases text size on a mobile eg. using
iOS Safari text resize controls, and is more applicable to the panel than other components
since the padding of the panel component limits the width of text more than our other
components do.

Decrease panel padding and heading font size on mobile to allow the text flow better. Also
decrease content font size to reflect font size drop for headings.

As an if-all-else-fails attempt to stop very long words from clipping, force them to break
and wrap instead. Hopefully this is not something that would happen often since we now also
reduce the padding and font size to help with this.

--- a/src/govuk/components/panel/_index.scss
+++ b/src/govuk/components/panel/_index.scss
@@ -12,7 +12,20 @@
     text-align: center;
 
     @include govuk-media-query($until: tablet) {
-      padding: govuk-spacing(6) - $govuk-border-width;
+      padding: govuk-spacing(3) - $govuk-border-width;
+
+      // This is an if-all-else-fails attempt to stop long words from overflowing the container
+      // on very narrow viewports by forcing them to break, wrap and hyphenate instead. This
+      // overflowing is more likely to happen when user increases text size on a mobile eg. using
+      // iOS Safari text resize controls.
+      //
+      // The overflowing is a particular problem with the panel component since it uses white
+      // text: when the text overflows the container, it is invisible on the white (page)
+      // background. When the text in our other components overflow, the user might have to scroll
+      // horizontally to view it but the the text remains legible.
+      overflow-wrap: break-word;
+      word-wrap: break-word; // Support IE (autoprefixer doesn't add this as it's not a prefix)
+      hyphens: auto;
     }
   }
 
@@ -32,6 +45,13 @@
     margin-bottom: govuk-spacing(6);
 
     @include govuk-font($size: 48, $weight: bold);
+
+    // Decrease font size on mobile to stop long words from overflowing the container. The
+    // overflowing is most likely to happen when user increases text size on a mobile eg. using iOS
+    // Safari text resize controls.
+    @include govuk-media-query($until: tablet) {
+      font-size: 24px;
+    }
   }
 
   .govuk-panel__title:last-child {
@@ -40,5 +60,10 @@
 
   .govuk-panel__body {
     @include govuk-font($size: 36);
+
+    // Decrease font size on mobile to reflect the font size being decreased for headings.
+    @include govuk-media-query($until: tablet) {
+      font-size: 19px;
+    }
   }
 }
